# CRUD-Database

./: Dockerfile  Makefile  db.sqlite3  db_config.json  manage.py  pyproject.toml  readme.md  requirements.txt
employees/: error_messages.py  models.py  serializers.py  tests.py  urls.py  views.py
employees/migrations/: 0001_initial.py
myproject/: settings.py
